--- a/app/views/insured/plan_shoppings/receipt.html.erb
+++ b/app/views/insured/plan_shoppings/receipt.html.erb
@@ -45,7 +45,11 @@
 					<span class="btn btn-default" data-target="#how_to_pay" data-toggle="modal">How to Pay</span>
 				<% end %>
 				<% if @enrollment.plan.carrier_profile.legal_name == "Kaiser" %>
-					<button class="btn btn-primary" data-toggle="modal" data-target="#payNowModal">Pay Now</button>
+          <% if can_access_pay_now_button %>
+					  <button class="btn btn-primary" data-toggle="modal" data-target="#payNowModal">Pay Now</button>
+          <% else %>
+            <button class="btn btn-primary disabled">Pay Now</button>
+          <% end %>
 				<% end %>
 				<%= link_to 'Print', '#', id: 'btnPrint', class: "btn btn-default interaction-click-control-print-purchase-confirmation" %>
 				<% if @enrollment.plan.carrier_profile.legal_name == "Kaiser" %>
