--- a/app/views/insured/plan_shoppings/receipt.html.erb
+++ b/app/views/insured/plan_shoppings/receipt.html.erb
@@ -13,7 +13,7 @@
           <% if @enrollment.employee_role.present? %>
           <% else %>
 					<% if @enrollment.plan.carrier_profile.legal_name == "Kaiser" %>
-					<p><strong>Important:</strong> You must pay your first month’s premium directly to Kaiser Permanente to activate your coverage. Select PAY NOW to make your first premium payment online.  To learn about other payment options, select ‘How to Pay’. .</p>
+					<p><strong>Important:</strong> You must pay your first month’s premium directly to Kaiser Permanente to activate your coverage. Select PAY NOW to make your first premium payment online.  To learn about other payment options, select ‘How to Pay’.</p>
 					<% else %>
 					<p><strong>Important:</strong> You must pay your first month’s premium directly to your carrier for your coverage to take effect. Select 'How to Pay' to learn more.</p>
 					<% end %>
@@ -234,13 +234,13 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title text-center text-uppercase"><strong>Warning !!!</strong></h4>
+        <h4 class="modal-title text-center text-uppercase"></h4>
       </div>
       <div class="modal-body">
         <p>
 				You are leaving the <%= Settings.site.short_name %> website and entering a privately-owned website created, operated and maintained by Kaiser Permanente.<br />
 				<ul>
-					<li>This link is provided for your convenience to allow you to pay your first month’s insurance premium now. It’s only available to make your first payment</li>
+					<li>This link is provided for your convenience to allow you to pay your first month’s insurance premium now. It’s only available to make your first payment.</li>
 					<li>The information that Kaiser Permanente collects and maintains as a result of your visit to its website is different from the information that DC Health Link collects and maintains.</li>
 					<li>DC Health Link cannot help you with any information regarding this website, including your username or password, or other technical issues.</li>
 					<br />
