--- a/app/views/exchanges/employer_applications/index.js.erb
+++ b/app/views/exchanges/employer_applications/index.js.erb
@@ -7,6 +7,8 @@ if ( $('tr.child-row:visible').length > 0 ) {
 
 }
 
+var actionSelected = "";
+
 if ( $parent_row.next().hasClass('child-row') ) {
 //
 } 
@@ -122,6 +124,7 @@ function validTerminatePy() {
 }
 
 function pyAction(action, id, term_date) {
+  actionSelected = action;
   showPlanYearActions(id);
   if (action == "reinstate") {
     disableDatePicker();
@@ -142,7 +145,7 @@ function pyAction(action, id, term_date) {
     disableSubmitButton();
   }
 }
-
+// You can use the actionSelected here
 function submitPlanActions() {
   /*
   $.ajax({
