--- a/app/views/exchanges/employer_applications/_index.html.erb
+++ b/app/views/exchanges/employer_applications/_index.html.erb
@@ -52,9 +52,9 @@
                   Actions <span class="caret"></span>
                 </button>
                 <ul class="dropdown-menu dropdown-menu-right" style="padding:10px">
-                    <li onclick="pyAction('cancel','<%= application.id %>', '0')" class="cancel-py">CANCEL</li>
-                    <li onclick="pyAction('terminate','<%= application.id %>','0')" class="terminate-py">TERMINATE</li>
-                    <li onclick="pyAction('reinstate', '<%= application.id %>', '<%= application.terminated_on %>')" class="reinstate-py">REINSTATE</li>
+                    <li onclick="pyAction('cancel','<%= application.id %>', '<%= @employer_profile.id %>', '0')" class="cancel-py">CANCEL</li>
+                    <li onclick="pyAction('terminate','<%= application.id %>', '<%= @employer_profile.id %>', '0')" class="terminate-py">TERMINATE</li>
+                    <li onclick="pyAction('reinstate', '<%= application.id %>', '<%= @employer_profile.id %>', '<%= application.terminated_on %>')" class="reinstate-py">REINSTATE</li>
                 </ul>
               </div>
               
