--- a/app/views/exchanges/employer_applications/index.js.erb
+++ b/app/views/exchanges/employer_applications/index.js.erb
@@ -8,6 +8,8 @@ if ( $('tr.child-row:visible').length > 0 ) {
 }
 
 var actionSelected = "";
+var applicationId = "";
+var employerId = "";
 
 if ( $parent_row.next().hasClass('child-row') ) {
 //
@@ -44,6 +46,11 @@ function populateDropDown(status) {
     $('li.cancel-py').addClass('blocking');
     $('li.terminate-py').addClass('blocking');
     $('li.reinstate-py').removeClass('blocking');
+  }
+  else if (status == "canceled"){
+    $('li.cancel-py').addClass('blocking');
+    $('li.terminate-py').addClass('blocking');
+    $('li.reinstate-py').addClass('blocking');
   }
   else if (status == "reinstated"){
     $('li.cancel-py').addClass('blocking');
@@ -123,7 +130,9 @@ function validTerminatePy() {
   }
 }
 
-function pyAction(action, id, term_date) {
+function pyAction(action, id, employer_id, term_date) {
+  applicationId = id;
+  employerId = employer_id
   actionSelected = action;
   showPlanYearActions(id);
   if (action == "reinstate") {
@@ -147,20 +156,11 @@ function pyAction(action, id, term_date) {
 }
 // You can use the actionSelected here
 function submitPlanActions() {
-  /*
   $.ajax({
-      type: "POST",
-      data:{
-
-      },
-      success: function() {
-        setTimeout(function() {
-
-        },400);
-      },
-      url: ""
-    });
-  */    
+    url: "/exchanges/employer_applications/"+applicationId+"/"+actionSelected,
+    method: 'PUT',
+    data: { employer_id: employerId }
+  });
 }
 
 $('#attestation_documents_table').mousemove(function() {
@@ -169,4 +169,3 @@ $('#attestation_documents_table').mousemove(function() {
 })
 
 applyJQDatePickers();
-
