--- a/app/views/notices/ivl/final_catastrophic_plan_letter.html.erb
+++ b/app/views/notices/ivl/final_catastrophic_plan_letter.html.erb
@@ -27,7 +27,7 @@ content: "You are receiving this letter because you were enrolled in a catastrop
 content: "Federal law required most Americans to have a minimum level of health coverage or pay a tax penalty through #{previous_year}. The #{Settings.aca.state_name} now has an individual responsibility requirement. This means that DC residents must have qualifying health coverage all year. If you don't have coverage, and don't qualify for an exemption, you'll have to pay a penalty when you file your DC taxes. For more information: <a href= #{Settings.site.ivl_responsibility_url}>https://dchealthlink.com/individual-responsibility-requirement</a>."} %>
 
 <%= render partial: 'notices/shared/paragraph', :locals => {
-content: "You will not receive any tax forms from #{Settings.site.short_name} for your enrollment in a catastrophic health plan, because these plans do not qualify for an advance premium tax credit.  Only those enrolled in plans that qualify for an advance premium tax credit receive a tax form from #{Settings.site.short_name}."} %>
+content: "You will not receive any tax forms from #{Settings.site.short_name} for your enrollment in a catastrophic health plan because these plans do not qualify for an advance premium tax credit.  Only those enrolled in plans that qualify for an advance premium tax credit receive a tax form from #{Settings.site.short_name}."} %>
 
 <%= render partial: 'notices/shared/paragraph', :locals => {
 content: "You may receive a tax form from your health insurance company.  Health insurance companies are encouraged (but not required) to provide a tax form for those enrolled in catastrophic coverage.  Contact your insurance company directly for more information on this tax form."} %>
