--- a/components/sponsored_benefits/app/views/sponsored_benefits/organizations/office_locations/_office_location_fields.html.erb
+++ b/components/sponsored_benefits/app/views/sponsored_benefits/organizations/office_locations/_office_location_fields.html.erb
@@ -55,7 +55,7 @@
                  <%= address.text_field :zip, class: "floatlabel form-control zip interaction-field-control-office-location-address-zip", required: true, placeholder: 'ZIP', data: { action: 'change->zip-check#zipChange', 'child-index': "#{f.index.to_s}" } %>
               </div>
               <%# Use better config settings %>
-              <% if BenefitSponsors::Site.by_site_key(:cca).present? %>
+              <% if aca_address_query_county %>
               <div class="invalid-feedback">Please provide a valid zipcode.</div>
 	            <div id="county-select-<%= f.index %>" class="county-select col-md-3 col-sm-3 col-xs-12 form-group form-group-lg no-pd">
 	               <% @counties = RatingArea.find_counties_for(zip_code: address.object.try(:zip)) %>
