--- a/components/sponsored_benefits/app/views/sponsored_benefits/organizations/plan_design_organizations/_entity_name_and_type_fields_autofill.html.erb
+++ b/components/sponsored_benefits/app/views/sponsored_benefits/organizations/plan_design_organizations/_entity_name_and_type_fields_autofill.html.erb
@@ -10,7 +10,7 @@
     <%= f.select(:entity_kind, options_for_select(entity_kinds.map {|k| [k.to_s.titleize, k.to_s]}, selected: f.object.try(:entity_kind)), {prompt: "Select Entity Kind"}, {:class => 'form-control'}) %>
   </div>
   <%# Use Better Config model settings %>
-  <% if BenefitSponsors::Site.by_site_key(:cca).present? %>
+  <% if aca_address_query_county %>
     <div class="col-md-3 col-sm-3 col-xs-12 form-group form-group-lg no-pd" style="margin-top: 10px">
       <%= f.select(:sic_code, grouped_options_for_select(@grouped_options, f.object.sic_code), {prompt: "Select Industry Code"}, {:class => "chosen-select"}) %>
       <span class="label label-warning" id="sic_warning"></span>
@@ -21,7 +21,7 @@
   <% end %>
 </div>
 <%# Use Better Config model settings %>
-<% if BenefitSponsors::Site.by_site_key(:cca).present? %>
+<% if aca_address_query_county %>
   <div id="sicHelperWrapper" class="hidden row row-form-wrapper no-buffer">
     <%#= render "sic_help" , sicFieldId: 'organization_sic_code' %>
   </div>
