--- a/components/benefit_sponsors/app/views/benefit_sponsors/profiles/broker_agencies/broker_agency_staff_roles/_form.html.erb
+++ b/components/benefit_sponsors/app/views/benefit_sponsors/profiles/broker_agencies/broker_agency_staff_roles/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @staff,{as: :staff, url: create_broker_staff_profiles_broker_agencies_broker_agency_staff_role_path(profile_id: params[:profile_id]), method: :post } do |f| %>
+<%= form_for @staff,{as: :staff,  url: {action: "create"}, method: :post } do |f| %>
   <div>
     <h4>Add Broker Agency Staff</h4>
     <div class="row no-buffer row-form-wrapper">
@@ -12,10 +12,11 @@
         <%= f.text_field :dob, :class => "floatlabel form-control interaction-field-control-person-dob", :placeholder => "DATE OF BIRTH *", required: true, readonly: defined?(readonly), onmouseover:"showDatepicker(this)" %>
       </div>
     </div>
+    <%= hidden_field_tag :profile_id, params[:profile_id] %>
   </div>
   <br>
   <button type="submit" class="btn btn-primary pull-left mtz sm_full_width"> <%= "Save".html_safe %></button>
-  <%= link_to 'Cancel', create_broker_staff_profiles_broker_agencies_broker_agency_staff_role_path(id:params[:profile_id]), class:'btn btn-default pull-left' %>
+  <%= link_to 'Cancel', profiles_broker_agencies_broker_agency_profile_path(id:params[:profile_id]), class:'btn btn-default pull-left' %>
 <% end %>
 
 <script type="text/javascript">
