--- a/app/views/insured/plan_shoppings/_plan_filters.html.erb
+++ b/app/views/insured/plan_shoppings/_plan_filters.html.erb
@@ -89,6 +89,26 @@
     </div>
   </div>
 
+  <div class="modal fade" id="plan_match_shop" tabindex="-1" role="dialog" role="document">
+    <div class="modal-dialog">
+       <div class="modal-content">
+          <div class="modal-header" style="height:50px">
+           <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+          </div>
+           <div style="margin-left:20px;">
+            <p style="margin-bottom:0px"><%= l10n("modal_onscreen") %></p>
+            <p style="margin-bottom:0px"><%= l10n("modal_onscreen1") %></p>
+            <p style="margin-bottom:0px"><%= l10n("modal_onscreen2") %></p>
+           </div>
+          <div class="modal-footer" style="padding:10px">
+            <center>
+            <button type="button" class="btn btn-default btn-default" data-dismiss="modal">Cancel</button>
+            <%=link_to l10n("confirm") , @dc_checkbook_url , class: "btn btn-primary", target: '_blank' %>
+          </div>
+        </center>
+       </div>
+    </div>
+  </div>
 
   <h3 class="header-title">Filter Results</h3>
   <% if @market_kind == "individual" || @benefit_group.try(:plan_option_kind) == "single_carrier" %>
