--- a/app/views/broker_agencies/broker_roles/_search_broker_agency.html.erb
+++ b/app/views/broker_agencies/broker_roles/_search_broker_agency.html.erb
@@ -14,7 +14,7 @@
           <td><%= agency.legal_name %></td>
           <td><%= agency.primary_broker_role.npn %></td>
           <td><%= agency.primary_broker_role.person.full_name %></td>
-          <td colspan="1"><a href="javascript:void(0)" class='btn btn-primary select-broker-agency pull-right'  onclick="selectBrokereAgency(this);"  data-broker_agency_profile_id="<%= agency._id %>"><%= l10n("broker_agencies.broker_roles.select_this_broker_agency")%></a></td>
+          <td colspan="1"><a href="javascript:void(0)" class='btn btn-primary select-broker-agency pull-right'  data-broker_agency_profile_id="<%= agency._id %>"><%= l10n("broker_agencies.broker_roles.select_this_broker_agency")%></a></td>
           </td>
         </tr>
         </tbody>
